--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,87 @@
-pandas==2.3.0
-pymongo==4.13.2
+adbc_driver_manager==1.7.0
+adbc_driver_postgresql==1.7.0
+adbc_driver_sqlite==1.7.0
+aioquic==1.2.0
+anyio==4.9.0
+AppKit==0.2.8
+attr==0.3.2
+beautifulsoup4==4.13.4
+boto3==1.39.3
+botocore==1.39.3
+brotli==1.1.0
+brotlicffi==1.1.0.0
+chardet==5.2.0
+checks==0.2
+ConfigParser==7.2.0
+ctypes_snappy==1.2
+cycler==0.12.1
+Cython==3.1.2
+dask==2025.5.1
+defusedxml==0.7.1
+docutils==0.21.2
+fastparquet==2024.11.0
+filelock==3.18.0
+Foundation==0.1.0a0.dev1
+fsspec==2025.5.1
+h2==4.2.0
+HTMLParser==0.0.2
+httpcore==1.0.9
+httpx==0.28.1
+hypothesis==6.135.26
+ipython==9.4.0
+ipywidgets==8.1.7
+jnius==1.1.0
+js==1.0
+kerberos==1.3.1
+keyring==25.6.0
+lxml==6.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.3
+mtrand==0.1
+mypy==1.16.1
+numexpr==2.11.0
+odfpy==1.4.1
+Pillow==11.3.0
+protobuf==6.31.1
+psutil==7.0.0
+py==1.11.0
+PyInstaller==6.14.2
+pymongo_auth_aws==1.3.0
+pymongocrypt==1.14.1
+pyodide==0.0.2
+pyOpenSSL==25.1.0
+PyQt4==4.11.4
+PyQt5==5.15.11
+pytest==8.4.1
+python_calamine==0.4.0
+pyxlsb==1.0.10
+PyYAML==6.0.2
+qtpy==2.4.3
+redis==6.2.0
+s3fs==2025.5.1
+scikit_learn==1.7.0
+scipy==1.16.0
+scipy_doctest==1.8.0
+service_identity==24.2.0
+sets==0.3.2
+setuptools==80.9.0
+simplejson==3.20.1
+sniffio==1.3.1
+Sphinx==8.2.3
+SQLAlchemy==2.0.41
 sshtunnel==0.4.0
+tables==3.10.2
+thread==2.0.5
+threadpoolctl==3.6.0
+traitlets==5.14.3
+trio==0.30.0
+urllib3_secure_extra==0.1.0
+winkerberos==0.12.2
+wmi==1.5.1
+xarray==2025.7.0
+xlrd==2.0.2
+xlsxwriter==3.2.5
+xlwt==1.3.0
+xmindparser==1.0.9
+xmlrpclib==1.0.1
+zstandard==0.23.0
